--- a/views/realTimeProducts.handlebars
+++ b/views/realTimeProducts.handlebars
@@ -21,5 +21,17 @@
 </div>
 
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.6.1/socket.io.js"></script>
+    <script>
+        const ws = io('ws://localhost:3050');
+        
 
+
+       ws.on('connect', () => { 
+        ws.emit('event_producto', 'Este es un mensaje de producto');
+        ws.on('server_confirm', (msg) => {
+            console.log('El servidor ha confirmado la conexión');
+        });
+    })
+    </script>
 </body>
